@startuml
title Banking Core - High Level ER Diagram

entity customers {
  + customer_id : BIGINT <<PK>>
  --
  name : VARCHAR
  email : VARCHAR
}

entity accounts {
  + account_id : BIGINT <<PK>>
  --
  account_no : VARCHAR
  status : ENUM
  customer_id : BIGINT <<FK>>
}

entity transactions {
  + tx_id : BIGINT <<PK>>
  --
  description : VARCHAR
  created_at : DATETIME
}

entity ledger_entries {
  + entry_id : BIGINT <<PK>>
  --
  tx_id : BIGINT <<FK>>
  account_id : BIGINT <<FK>>
  amount : DECIMAL
  entry_type : ENUM
  created_at : DATETIME
}

entity account_balances {
  + account_id : BIGINT <<PK, FK>>
  --
  balance : DECIMAL
  last_updated : DATETIME
}

customers ||--o{ accounts : "has"
accounts ||--o{ ledger_entries : "records"
transactions ||--o{ ledger_entries : "contains"
accounts ||--|| account_balances : "has"

@enduml
